--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ numpy==1.26.4
 # Data
 datasets==2.21.0
 kaggle==1.6.17
+kagglehub==0.3.4
 pandas==2.2.3
+scikit-learn==1.5.2
 tokenizers==0.20.1
 
 # Model
@@ -14,5 +16,7 @@ transformers==4.46.1
 
 # Plot
 ipykernel==6.29.5
+ipywidgets==8.1.5
+jupyter==1.1.1
 tqdm==4.66.6
 matplotlib==3.9.2
